@@ -40,6 +40,7 @@
 	php : added --php-prefix for prefixing generated files and class names
 	all : added type_expr_with_type enum support
 	php/js : fixed adding 'null' to StringBuf
+	all : added haxe.macro.Context.defineType
 
 2011-01-30: 2.07
 	all : fixed completion support with --remap
